# purdue-dining-mcp

./: .dockerignore  .gitignore  .mcp.json  Dockerfile  LICENSE  PROMPT.md  README.md  openapi.yaml  pyproject.toml
.claude/: settings.json
src/purdue_menu/: __init__.py  __main__.py  api.py  db.py  recommender.py  remote.py  server.py
